Server now uses RTM .net core

--- a/src/AlmVR.Server.Core/AlmVR.Server.Core.csproj
+++ b/src/AlmVR.Server.Core/AlmVR.Server.Core.csproj
@@ -20,14 +20,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AlmVR.Common.Models" Version="1.0.9-ga252fefe34" />
     <PackageReference Include="Autofac" Version="4.8.1" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.2.2" />
     <PackageReference Include="Nerdbank.GitVersioning" Version="2.1.23" />
     <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\AlmVR.Common.Models\AlmVR.Common.Models\AlmVR.Common.Models.csproj" />
   </ItemGroup>
 
 </Project>
