--- a/src/AlmVR.Server/AlmVR.Server.csproj
+++ b/src/AlmVR.Server/AlmVR.Server.csproj
@@ -14,7 +14,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.0-rc1-final" />
+    <PackageReference Include="AlmVR.Common.Models" Version="1.0.9-ga252fefe34" />
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.0" />
     <PackageReference Include="Nerdbank.GitVersioning" Version="2.1.23" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
@@ -24,7 +25,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\AlmVR.Common.Models\AlmVR.Common.Models\AlmVR.Common.Models.csproj" />
     <ProjectReference Include="..\AlmVR.Server.Core\AlmVR.Server.Core.csproj" />
   </ItemGroup>
 
