--- a/src/AlmVR.Server.Providers.Trello/AlmVR.Server.Providers.Trello.csproj
+++ b/src/AlmVR.Server.Providers.Trello/AlmVR.Server.Providers.Trello.csproj
@@ -3,14 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <OutputPath>..\build\Plugins\</OutputPath>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <OutputPath>..\build\Plugins\</OutputPath>
+    <OutputPath>..\..\build\$(Configuration)\Plugins\</OutputPath>
   </PropertyGroup>
   
     <ItemGroup>
