--- a/src/AlmVR.Server/AlmVR.Server.csproj
+++ b/src/AlmVR.Server/AlmVR.Server.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AlmVR.Common.Models" Version="1.0.9-ga252fefe34" />
+    <PackageReference Include="AlmVR.Common.Models" Version="1.0.12-g73003ca503" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.0" />
     <PackageReference Include="Nerdbank.GitVersioning" Version="2.1.23" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
