--- a/src/AlmVR.Server.Core/AlmVR.Server.Core.csproj
+++ b/src/AlmVR.Server.Core/AlmVR.Server.Core.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AlmVR.Common.Models" Version="1.0.12-g73003ca503" />
+    <PackageReference Include="AlmVR.Common.Models" Version="1.0.13-gdb9b60f24e" />
     <PackageReference Include="Autofac" Version="4.8.1" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.2.2" />
     <PackageReference Include="Nerdbank.GitVersioning" Version="2.1.23" />
