--- a/src/AlmVR.Server.Providers.Trello/AlmVR.Server.Providers.Trello.csproj
+++ b/src/AlmVR.Server.Providers.Trello/AlmVR.Server.Providers.Trello.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
   
     <ItemGroup>
-      <PackageReference Include="Nerdbank.GitVersioning" Version="2.1.23" />
+      <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.1.2" />
+      <PackageReference Include="Nerdbank.GitVersioning" Version="2.2.13">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+      </PackageReference>
       <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     </ItemGroup>
 
