--- a/src/AlmVR.Server/AlmVR.Server.csproj
+++ b/src/AlmVR.Server/AlmVR.Server.csproj
@@ -8,8 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="AlmVR.Common.Models" Version="1.0.13-gdb9b60f24e" />
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.0" />
-    <PackageReference Include="Nerdbank.GitVersioning" Version="2.1.23" />
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.3" />
+    <PackageReference Include="Nerdbank.GitVersioning" Version="2.2.13">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 
