--- a/src/AlmVR.Server/AlmVR.Server.csproj
+++ b/src/AlmVR.Server/AlmVR.Server.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AlmVR.Server.Core\AlmVR.Server.Core.csproj" />
+    <ProjectReference Include="..\AlmVR.Server.Hubs\AlmVR.Server.Hubs.csproj" />
   </ItemGroup>
 
 </Project>
